--- a/app_import/templates/index.html
+++ b/app_import/templates/index.html
@@ -21,8 +21,8 @@
         <div class="card">
             <a href="upload_file">
                 <div class="card-content">
-                    <p class="title is-4">Processar Invoice</p>
-                    <p class="subtitle is-6">Gera um resumo em pdf da Invoice</p>
+                    <p class="title is-4">Importar Invoice</p>
+                    <p class="subtitle is-6">Obter dados da Invoice para alimentar BD</p>
                 </div>
             </a>
         </div>
